@@ -1,5 +1,6 @@
 Revision history for File::Gettext
 
+          - Switched Travis to a containerised build
           - Better attribute naming
             Replaced abbreviation with full length names
           - Short circuit load if files do not exist
